--- a/css/hover-style.css
+++ b/css/hover-style.css
@@ -150,7 +150,7 @@ body{background-color:#f1f1f2}
 }
 
 /*********************** Style - 7 *******************/
-.box7{position:relative}
+/*.box7{position:relative}
 .box7:after,.box7:before{width:100%;height:100%;background:rgba(11,33,47,.9);position:absolute;top:0;left:0;opacity:0;transition:all .5s ease 0s}
 .box7:after{background:rgba(255,255,255,.3);border:2px solid #0dab76;top:0;left:170%;opacity:1;z-index:1;transform:skewX(45deg);transition:all 1s ease 0s}
 .box7:hover:before{opacity:1}
@@ -166,7 +166,7 @@ body{background-color:#f1f1f2}
 .box8 .icon li,.box8 .title{display:inline-block}
 .box7 .icon li a:hover{transform:rotate(360deg)}
 @media only screen and (max-width:990px){.box{margin-bottom:30px}
-}
+}*/
 
 /*********************** Style - 8 *******************/
 .box8 .icon,.box8 .title{margin:0;position:absolute}
